--- a/03/onlineprofile.html
+++ b/03/onlineprofile.html
@@ -10,13 +10,13 @@
         <div>
             <!-- 자기 소개 -->
             <section>
-                <h2 class="subtitle">Who am I?</h2>
+                <h2>Who am I?</h2>
                 <p><mark>전체적인 웹 개발</mark>에 관심이 많습니다. <br>현재 대학교 4학년 재학중입니다.</p>
             </section>
 
             <!-- 경력 -->
             <section>
-                <h2 class="subtitle">Experience</h2>
+                <h2>Experience</h2>
                 <ul>
                     <li>쇼핑몰 사이트 개발
                         <ul>
