--- a/07/member.html
+++ b/07/member.html
@@ -7,23 +7,41 @@
 </head>
 <body>
     <h2>회원가입</h2>
-    <ul>
-        <li>
-            <label for="user-name">이름</label>
-            <input type="text" id="user-name">
-        </li>
-        <li>
-            <label for="mail">이메일</label>
-            <input type="email" id="mail">
-        </li>
-        <li>
-            <label for="phone">연락처</label>
-            <input type="tel" id="phone">
-        </li>
-        <li>
-            <label for="sns">SNS</label>
-            <input type="url" id="sns">
-        </li>
-    </ul>
+    <form>
+        <fieldset>
+            <legend>로그인 정보</legend>
+            <ui>
+                <li>
+                    <label for="user_id">아이디</label>
+                    <input type="text" id="user_id">
+                </li>
+                <li>
+                    <label for="passwd">비밀번호</label>
+                    <input type="password" id="passwd">
+                </li>
+            </ui>
+        </fieldset>
+        <fieldset>
+            <legend>개인 정보</legend>
+            <ul>
+                <li>
+                    <label for="user-name">이름</label>
+                    <input type="text" id="user-name">
+                </li>
+                <li>
+                    <label for="mail">이메일</label>
+                    <input type="email" id="mail">
+                </li>
+                <li>
+                    <label for="phone">연락처</label>
+                    <input type="tel" id="phone">
+                </li>
+                <li>
+                    <label for="sns">SNS</label>
+                    <input type="url" id="sns">
+                </li>
+            </ul>
+        </fieldset>
+    </form>
 </body>
 </html>
