--- a/07/submitImage.html
+++ b/07/submitImage.html
@@ -8,6 +8,6 @@
 <body>
     <label>아이디<input type="text" size="15"></label>
     <label>비밀번호<input type="password" size="15"></label>
-    <input type="image" id="button" src="images/login.png">
+    <input type="image" id="button" src="images/login.png" alt="login">
 </body>
 </html>
