--- a/09/selector2.html
+++ b/09/selector2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>selector</title>
+    <title>SpanSelector</title>
     <style>
         .redtext {
             color: red;
@@ -13,12 +13,9 @@
 <body>
     <h2 class="redtext">Html과 css</h2>
     <p>
-        HTML과 CSS는 웹 페이지를 만드는 데 필수적인 두 가지 핵심 언어입니다.
+        <span class="redtext">HTML와 CSS</span>는 웹 페이지를 만드는 데 필수적인 두 가지 핵심 언어입니다.
         HTML은 웹페이지의 뼈대를 만들고 텍스트, 이미지, 버튼 등 구조적인 콘텐츠를 정의하며, 
         CSS는 HTML로 만든 요소에 색상, 글꼴, 레이아웃 등의 스타일을 지정하여 웹페이지를 꾸미는 역할을 합니다. 
-    </p>
-    <p class="redtext">
-        HTML은 웹 페이지의 구조와 내용을 만드는 마크업 언어이고, CSS는 HTML로 만든 구조에 색상, 글꼴, 레이아웃 등 디자인을 입히는 스타일시트 언어입니다.
     </p>
 </body>
 </html>
